[package]
authors = [ 'TVM Labs <hello@tvmlabs.org>' ]
edition = '2021'
license = 'Apache-2.0'
name = 'tvm_struct'
repository = 'https://github.com/tvmlabs/tvm-struct'
rust-version = '1.75'
version = '1.0.15'

[dependencies]
anyhow = '1.0.70'
failure = '0.1.0'
hex-literal = '0.3.4'
tvm_block = { git = 'https://github.com/tvmlabs/tvm-block.git', branch = "main" }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-types.git', branch = "main" }
