[package]
authors = ["TVM Labs <hello@tvmlabs.org>"]
edition = "2021"
name = "tvm_struct"
repository = "https://github.com/tvmlabs/tvm-struct"
rust-version = "1.75"
version = "2.0.0"

[dependencies]
hex-literal = "0.4.1"
thiserror = "1.0.56"
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
